Ajuste links relativos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
   <div class="container-fluid">
     <!-- Home icon -->
-    <a class="navbar-brand" href="/index">
+    <a class="navbar-brand" href="./index">
       <i class="bi bi-house-door-fill"></i>
     </a>
 
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-2">
         <li class="nav-item">
-          <a class="nav-link" href="/stories/first-story">Stories</a>
+          <a class="nav-link" href="./stories/first-story">Stories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/collection">Collection</a>
+          <a class="nav-link" href="./collection">Collection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="./about">About</a>
         </li>
       </ul>
     </div>
