Ajuste links relativo2s

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ html, body {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: url("../assets/images/moravia.jpg");
+  background-image: url("../images/moravia.jpg");
   background-size: 185%;
   background-position: center;
   background-repeat: no-repeat;
