--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
   <div class="container-fluid">
     <!-- Home icon -->
-    <a class="navbar-brand" href="{{ '/index' | relative_url }}">
+    <a class="navbar-brand" href="{{ '/' | relative_url }}">
       <i class="bi bi-house-door-fill"></i>
     </a>
 
