--- a/_includes/story/slide-video.html
+++ b/_includes/story/slide-video.html
@@ -1,6 +1,4 @@
-<div
-  id="video-slide"
-  class="w-100 h-100 position-absolute top-0 start-0 d-none"
->
+<div id="video-slide" class="position-absolute top-0 start-0 w-100 h-100">
+  <!-- container only, no iframe -->
   <div id="yt-player" class="w-100 h-100"></div>
 </div>
