--- a/_includes/story/step.html
+++ b/_includes/story/step.html
@@ -6,6 +6,78 @@
   data-x="{{ include.x }}"
   data-y="{{ include.y }}"
   data-zoom="{{ include.zoom }}"
+  {%
+  if
+  include.media_type
+  %}
+  data-media-type="{{ include.media_type }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.media_src
+  %}
+  data-media-src="{{ include.media_src }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.media_width
+  %}
+  data-media-width="{{ include.media_width }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.media_height
+  %}
+  data-media-height="{{ include.media_height }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.media_start
+  %}
+  data-media-start="{{ include.media_start }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.pin1
+  %}
+  data-pin1="{{ include.pin1 | escape }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.pin2
+  %}
+  data-pin2="{{ include.pin2 | escape }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.pin3
+  %}
+  data-pin3="{{ include.pin3 | escape }}"
+  {%
+  endif
+  %}
+  {%
+  if
+  include.pin4
+  %}
+  data-pin4="{{ include.pin4 | escape }}"
+  {%
+  endif
+  %}
 >
   <h4>{{ include.title }}</h4>
   <p>{{ include.text }}</p>
