--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -42,5 +42,11 @@
 
     <!-- Your custom JS -->
     <script src="{{ '/assets/js/story.js' | relative_url }}"></script>
+    <script>
+      window.STORY_DEFAULT_IMAGE =
+        "{{ '/assets/images/map.jpg' | relative_url }}";
+      window.STORY_DEFAULT_W = 2586; /* your real size */
+      window.STORY_DEFAULT_H = 2102;
+    </script>
   </body>
 </html>
